fix footer center alignment final

--- a/index.css
+++ b/index.css
@@ -83,12 +83,21 @@ body{
     align-items: flex-start; 
     padding: 2rem 1rem;
  }
- .footer-action{
+ 
+.footer-action {
     align-items: flex-end;
- }
- .footer-action button{
-    
- }
+   flex: 1; 
+   min-width: 180px; 
+   display: flex; 
+   flex-direction: column; 
+   align-items: center;
+   gap: 1rem;
+  }
+.footer-action button {
+    margin-bottom: 1rem;
+    margin-right: 20px;
+  }
+ 
  @media screen and (max-width:800px){
     body {
     max-width: 100vw;
@@ -162,6 +171,9 @@ body{
     justify-content: center;
     align-items: center;
    }
+   .footer-social{
+    margin-bottom: 1rem;
+   }
   .footer-top, .footer-links, .footer-bottom {
     width: 100%;
     display: flex;
@@ -169,6 +181,17 @@ body{
       justify-content: center;
     align-items: center;
     text-align: center;
+    margin-bottom: 1rem;
+  }
+  .footer-action {
+   flex: 1; 
+   min-width: 180px; 
+   display: flex; 
+   flex-direction: column; 
+   gap: 1rem;
+  }
+  .footer-action button {
+    margin: 0;
     margin-bottom: 1rem;
   }
  
